# circuitous-benchmarks

./: .gitignore  .gitlint  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
bench/: CMakeLists.txt  driver.cpp  from_source.cpp  from_verilog.cpp  lifter.cpp  optimize.cpp  options.cpp  simple.cpp  stats.cpp  yosys.cpp
data/: 3d_image_toolkit.ciff  adcs.ciff  adds.ciff  all-ands.ciff  ands.ciff  calls.ciff  cmps.ciff  decs.ciff  divs.ciff  half-ands.ciff  idivs.ciff  incs.ciff  jmps.ciff  lan_simulator.ciff  leas.ciff  movs.ciff  mul-16.ciff  muls.ciff  ors.ciff  router_simulator.ciff  sbbs.ciff  small.ciff  stack.ciff  subs.ciff  tests.ciff  tiny86.ciff  xchg.ciff  xors.ciff
data/verilog/: mwa.v  original.v  purged.v
include/: common.hpp  instance.hpp  lifter.hpp  optimize.hpp  options.hpp  runner.hpp  stats.hpp  verilog.hpp  yosys.hpp
patterns/: reduce.yml
ports/remill/: vcpkg.json
results/22-07-29/: reduce-ands.json
results/22-09-13/: mwa-all-with-opt.json  mwa-all.json  mwa-muls.json  mwa-prop-with-opt.json  mwa-prop-without-shifts.json  mwa-with-opt.json  noopt.json
results/23-01-25/: collapse_ops.json  conjure.json  merge_advices.json  noopt.json  overflow-flag-mix.json  simplify.json  tables.txt
results/23-02-07/: conjure-simplify.json  conjure.json  noopt.json  simplify.json  tables.txt
results/23-02-16/: eqsat.json  llvm.json  mux.json  noopt.json  sim-conmul-llvm.json  sim-conmul-mux-llvm-eqsat.json  sim-conmul-mux-llvm.json  sim-eqsat-llvm.json
results/23-02-17/: conadd-llvm.json  conall-llvm.json  condiv-llvm.json  conmul-llvm.json  eqsat.json  llvm.json  noopt.json  sim-conall-llvm.json  sim-conall-mux-llvm-eqsat.json  sim-conall-mux-llvm.json  sim-conmul-condiv-mux-llvm.json  sim-conmul-mux-llvm.json  sim-eqsat-llvm.json
results/23-03-14/: noopt.json  sim-conall-mux-llvm.json  sim-condiv-mux-llvm-eqsat.json  sim-condiv-mux-llvm.json  sim-conmul-condiv-mux-llvm.json
results/23-10-06/: noopt.json
scripts/: batch.pl  bench-container.dockerfile  bench-min.sh.in  stats.ipynb  yosys.pl  yosys_simple.sh  yosys_stat.sh
